sim card balance
close #1
close #2

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,8 @@ timeZone: Europe/Moscow
 heartbeatEnabled: false
 heartbeatIntervalSeconds: 10800
 
+simBalanceAlarmThreshold: 30
+
 checkLastUpdateIntervalSeconds: 600
 
 autofonHost: 176.9.114.139
